Test github variation

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "jspm": {
     "dependencies": {
-      "jade": "github:jadejs/jade@^1.9.1"
+      "jade-compiler": "github:jadejs/jade@1.9.1",
+      "jade-runtime": "github:jadejs/jade@1.9.1/runtime"
     }
   }
 }
