--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "jspm": {
     "dependencies": {
-      "jade-compiler": "npm:jade@1.9.1"
+      "jade-compiler": "npm:jade@1.9.1",
+      "jade-runtime": "npm:jade-runtime@^1.0.0"
     }
   }
 }
