--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-jade",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Jade loader plugin",
   "main": "jade.js",
   "scripts": {
@@ -28,9 +28,11 @@
     "serve-static": "^1.7.1"
   },
   "jspm": {
+    "map": {
+      "jade-runtime": "npm:jade@1.9.1/lib/runtime"
+    },
     "dependencies": {
-      "jade-compiler": "npm:jade@1.9.1",
-      "jade-runtime": "npm:jade-runtime@^1.0.0"
+      "jade-compiler": "npm:jade@1.9.1"
     }
   }
 }
