--- a/package.json
+++ b/package.json
@@ -29,10 +29,18 @@
   },
   "jspm": {
     "map": {
-      "jade-runtime": "npm:jade@1.9.1/lib/runtime"
+      "jade-runtime": "npm:jade@1.11.0/lib/runtime"
     },
     "dependencies": {
-      "jade-compiler": "npm:jade@1.9.1"
+      "jade-compiler": "npm:jade@1.11.0"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
     }
+  },
+  "map": {
+    "jade-runtime": "npm:jade@1.11.0/lib/runtime"
   }
 }
