--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "plugin-jade",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Jade loader plugin",
-  "main": "plugin-jade.js",
+  "main": "jade.js",
   "scripts": {
     "test": "node test.js"
   },
